# floes

./: .gitignore  README.md  pyproject.toml
examples/fedenhance/: README.md  asteroid_sdr.py  chunked_libri_fsd.py  dataset_loaders.py  groupcomm_sudormrf_v2.py  mixture_consistency.py  requirements.txt  run_eval_all_chkpts.py  run_on_one_machine.bash  sisdr.py  sudo_client.py  sudo_common.py  sudo_server.py  sudormrf.py  utility.py
examples/fedstream/: README.md  hw_interface.py  noise_4s.npy  noise_4s_1.npy  noise_4s_2.npy  rec_dataloader.py  requirements.txt  stream_client.py  stream_server.py
examples/haiku_mnist/: haiku_mnist_common.py  haiku_mnist_server.py
examples/layerwise_cifar10/: layerwise_client.py  layerwise_common.py  layerwise_server.py
examples/layerwise_mnist/: layerwise_client.py  layerwise_common.py  layerwise_server.py
examples/torch_mnist/: disjoint_client.py  disjoint_server.py  torch_mnist_client.py  torch_mnist_common.py  torch_mnist_server.py
hwsetup/jetson_nano/: README.md
hwsetup/raspi/: README.md  requirements.sh
src/examples/fedenhance/: sudo_client.py  sudo_server.py  sudormrf.py
src/examples/haiku_mnist/: haiku_mnist_client.py
src/examples/layerwise_mnist/: README.md  layerwise_client.py  layerwise_server.py
src/examples/mnist/: mnist_client.py  mnist_server.py
src/examples/torch_mnist/: torch_mnist_client.py  torch_mnist_server.py
src/floe/client/: client.py  generic.py  grpc_client.py
src/floe/core/: condecon.py  connection.py  floe_logger.py
src/floe/proto/: floe.proto  floe_pb2.py  floe_pb2_grpc.py
src/floe/server/: __init__.py  client_stub.py  generic.py  grpc_server.py  server.py
src/floes/client/: __init__.py  client.py  generic.py  grpc_client.py  haiku_client.py  torch_client.py
src/floes/core/: __init__.py  condecon.py  connection.py  floes_logger.py  params.py
src/floes/proto/: floes.proto  floes_pb2.py  floes_pb2_grpc.py
src/floes/server/: client_stub.py  generic.py  grpc_server.py  server.py
src/floes/strategy/: __init__.py  fedavg.py  (+1 more)
