[tool.poetry]
name = "floes"
version = "0.0.1"
description = ""
authors = ["dbisk <16860792+dbisk@users.noreply.github.com>"]
packages = [
    { include = "floes", from = "src/" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
torch = "^1.10.0"
grpcio = "^1.44.0"
grpcio-tools = "^1.44.0"

[tool.poetry.dev-dependencies]
torchaudio = "^0.10.0"
torchvision = "^0.11.0"
tqdm = "^4.62.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
