[tool.poetry]
name = "floes"
version = "0.0.1"
description = ""
authors = ["dbisk <16860792+dbisk@users.noreply.github.com>"]
packages = [
    { include = "floes", from = "src/" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = "^1.19"
torch = "^1.9"
grpcio = "^1.44"
grpcio-tools = "^1.44"

[tool.poetry.dev-dependencies]
torchaudio = "^0.9"
torchvision = "^0.10"
tqdm = "^4.62"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
