[tool.poetry]
name = "floes"
version = "0.0.4"
description = ""
authors = ["dbisk <16860792+dbisk@users.noreply.github.com>"]
packages = [
    { include = "floes", from = "src/" }
]

[tool.poetry.dependencies]
python = ">=3.6, <3.10"
numpy = "^1.19"
grpcio = "^1.44"
grpcio-tools = "^1.44"
jax = {version = "^0.3.4", optional = true}
jaxlib = {version = "^0.3.2", optional = true}
dm-haiku = {version = "^0.0.6", optional = true}
optax = {version = "^0.1.1", optional = true}
torch = {version = "^1.9", optional = true}
torchaudio = {version = "^0.9", optional = true}
torchvision = {version = "^0.10", optional = true}
tqdm = {version = "^4.62", optional = true}

[tool.poetry.extras]
torch = ["torch", "torchaudio", "torchvision"]
jax = ["jax", "jaxlib"]
haiku = ["jax", "jaxlib", "dm-haiku", "optax"]
tqdm = ["tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
